common-applications/test-environment/mindspore-website/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: mindspore-website2
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: backend
  type: ClusterIP
