common-applications/test-environment/mindspore-website/backend/backend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: backend-ingress
  namespace: mindspore-website2
spec:
  rules:
  - host: mindspore-console.test.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: backend-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - mindspore-console.test.osinfra.cn
    secretName: backend-tls
